# secops-chaos

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  Dockerfile.executor-server  Makefile  README.md  embed.go  go.mod  go.sum  main.go
.github/workflows/: build.yml  pr.yml  release.yml
aws-genai-hackathon/: README-for-hackathon.md
cmd/: clean.go  root.go  run.go  verify.go  version.go
cmd/cli/: main.go
cmd/cli/cmd/: clean.go  root.go  run.go  verify.go
cmd/executor-server/: handler.go  main.go
cmd/secops-chaos/: main.go
cmd/secops-chaos-ai/: .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
cmd/secops-chaos-ai/app/: app.py
cmd/secops-chaos/cmd/: components.go  experiment.go  (+3 more)
cmd/woodpecker/: main.go
cmd/woodpecker-ai/: entrypoint.sh  pyproject.toml
cmd/woodpecker-ai-app/: README.md  entrypoint.sh  pyproject.toml
cmd/woodpecker-ai-app/app/: __main__.py  app.py
cmd/woodpecker-ai-verifier/: README.md  entrypoint.sh  pyproject.toml
cmd/woodpecker-ai-verifier/app/: app.py
cmd/woodpecker-executor-server/: handler.go
components/: README.md  embed.go  secops-chaos-ai.yaml  woodpecker-ai-verifier.yaml  woodpecker-ai.yaml
experiments/: README.md  cluster-admin-binding.yaml  cluster_admin_binding.yaml  credential-access-app-secrets.yaml  credential_access_app_secrets.yaml  embed.go  host-path-mount.yaml  host-path-volume.yaml  host_path_volume.yaml  kube-exec.yaml  list-k8s-secrets.yaml  list_k8s_secrets.yaml  llm-data-leakage-with-prompt-injection.yaml  llm-data-leakage.yaml  llm-data-poisoning.yaml  llm_data_leakage.yaml  privileged-container.yaml  remote-execute-api.yaml  remote_execute_api.yaml  run-privileged-container.yaml  run_privileged_container.yaml
internal/categories/: categories.go
internal/components/: ai.go  components.go
internal/executor/: executor.go
internal/experiments/: credential_access_container_secrets.go  dag.go  experiments.go  experiments_ai_data_leakage.go  experiments_ai_data_poisoning.go  experiments_cluster_admin_binding.go  experiments_credential_access_container_secrets.go  experiments_credential_access_container_secrets_test.go  experiments_execute_api.go  experiments_host_path_mount.go  experiments_host_path_mount_test.go  experiments_kube_exec.go  experiments_list_k8s_secrets.go  experiments_privileged_container.go  experiments_remote_execute_api.go  experiments_remote_execute_api_test.go  helpers.go  host_path_mount.go  parser.go  parser_test.go  privileged_container.go  registry.go
internal/k8s/: client.go  exec.go  forwarder.go  helpers.go  helpers_test.go  namespaces.go  secrets.go  version.go
internal/output/: output.go
internal/snippets/: snippets.go
internal/verifier/: verifier.go  verifier_test.go
internal/verifiers/: privileged_container.go  verifiers.go
(+10 files in other folders)
