[project]
name = "secops-chaos-ai"
authors = [
  { name = "Glenn McDonald", email = "glenn.mcdonald@operant.ai" },
  { name = "Priyanka Tembey", email = "priyanka@operant.ai"}
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "asyncio==3.4.3",
  "fastapi>=0.110",
  "pydantic==1.10.14",
  "openai==1.30.5",
  "uvicorn[standard]>=0.29",
  "presidio-analyzer[transformers]==2.2.354",
  "presidio-anonymizer==2.2.354",
  "transformers==4.38.2",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
secops-chaos-ai-api = "app.__main__:run_uvicorn"
