[project]
name = "woodpecker-ai-verifier"
authors = [
  { name = "Glenn McDonald", email = "glenn.mcdonald@operant.ai" },
  { name = "Priyanka Tembey", email = "priyanka@operant.ai"}
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0.0",
  # https://github.com/explosion/spaCy/issues/13528
  "numpy==1.26.4",
  "uvicorn[standard]>=0.29",
  "presidio-analyzer[transformers]==2.2.354",
  "presidio-anonymizer==2.2.354",
  "transformers==4.50.0",
  "structlog>=24",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
woodpecker-ai-verifier = "app.__main__:run_uvicorn"
